// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListSSOConfiguration /> renders correctly with empty list 1`] = `
<div
  className="box-content box-content__content-form"
>
  <div
    className="mt-30 mb-15"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        <span>
          Méthode d'authentification Open ID
        </span>
      </h3>
    </div>
    <span>
      Aucun méthode configurée
    </span>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="mt-15"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="global.add"
        values={Object {}}
      />
    </Button>
    <Connect(ReduxForm)
      isCreating={true}
      onClose={[Function]}
      show={false}
    />
  </div>
</div>
`;

exports[`<ListSSOConfiguration /> renders correctly with items 1`] = `
<div
  className="box-content box-content__content-form"
>
  <div
    className="mt-30 mb-15"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        <span>
          Méthode d'authentification Open ID
        </span>
      </h3>
    </div>
    <ListGroup
      className=""
    >
      <ForwardRef(Relay(SSOConfigurationItem))
        configuration={
          Object {
            "$fragmentRefs": null,
            "accessTokenUrl": "https://localhost:8888/token",
            "authorizationUrl": "https://localhost:8888/authorization",
            "clientId": "clientId",
            "id": "oauth2ID",
            "logoutUrl": "https://localhost:8888/logout",
            "name": "Open ID Provider",
            "secret": "SecretKey",
            "userInfoUrl": "https://localhost:8888/user",
          }
        }
        key="0"
      />
    </ListGroup>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="mt-15"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="global.add"
        values={Object {}}
      />
    </Button>
    <Connect(ReduxForm)
      isCreating={true}
      onClose={[Function]}
      show={false}
    />
  </div>
</div>
`;
